some fixes, scrollbars, optimization

--- a/assets/css/scrollbars.css
+++ b/assets/css/scrollbars.css
@@ -1,1 +1,15 @@
-/* TODO */
+body::-webkit-scrollbar {
+    width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #061b52;
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #fd5fec;
+    border-radius: 20px;
+    border: 5px solid #061b52;
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
+}
