--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -4,7 +4,7 @@ body {
   background: url(../../assets/images/bg-dashboard.jpg) no-repeat;
   background-size: cover;
   min-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .app {
